# SmartTobacco

./: README.md
backend/src/main/java/com/anranruozhu/service/impl/: SmsServiceImpl.java
docs/: smartleafhub.sql  说明.md
hardware/: README.md
hardware/mqtt_conn1/: BUILD.gn  light_intensity.c  main.c  mqtt_utils.c  mqtt_utils.h
hardware/mqtt_conn2/: BUILD.gn  Soil.c  main.c  mqtt_utils.c  mqtt_utils.h  sht40.c
