static_library("mqtt_conn2") 
{
    sources = 
    [
        "wifi_utils.c",
        "mqtt_utils.c",
        "main.c",
        "sht40.c",
        "Soil.c",
        # "cJSON.c",

    ]

    include_dirs = 
    [

        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//third_party/pahomqtt/MQTTPacket/src",
        "//third_party/pahomqtt/MQTTPacket/samples",
        "//vendor\hisi\hi3861\hi3861\components\at\src"
    ]
}
